# CMakeHelper

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
cmake/: CMakeHelper.cmake
cmake/internal/: AddCMakeListDirectory.cmake  AllCMakeListsUnder.cmake  AllSubdirCMakeLists.cmake  BuildExecutable.cmake  BuildExternalProject.cmake  BuildHeaderLibrary.cmake  BuildInterfaceLibrary.cmake  BuildObjectLibrary.cmake  BuildPrebuilt.cmake  BuildSharedLibrary.cmake  BuildStaticLibrary.cmake  BuildTest.cmake  ClearVars.cmake  CollectLocalSources.cmake  PublishLocalObjectSources.cmake
example/: CMakeLists.txt
example/auto_lists/: CMakeLists.txt
example/auto_lists/direct/: CMakeLists.txt
example/auto_lists/direct/include/auto_lists/: direct.hpp
example/auto_lists/direct/src/: direct.cpp
example/auto_lists/recursive/: CMakeLists.txt
example/auto_lists/recursive/modules/core/: CMakeLists.txt
example/auto_lists/recursive/modules/core/src/: core.cpp
example/auto_lists/recursive/src/: main.cpp
example/basic_hello/: CMakeLists.txt
example/basic_hello/src/: main.cpp
example/external_project/: CMakeLists.txt
example/external_project/external_greeting/: CMakeLists.txt
example/external_project/external_greeting/include/: external_greeting.hpp
example/external_project/external_greeting/src/: external_greeting.cpp
example/external_project/src/: main.cpp
example/src/: main.cpp
example/test_hello/: CMakeLists.txt
example/test_hello/src/: test_main.cpp
hello/: CMakeLists.txt
hello/include/hello/: hello.hpp
hello/src/: hello.cpp
(+4 files in other folders)
